<resources>
    <string name="app_name">XChangeBarter</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="trade_block">trade block</string>
    <string name="xchange">XChange</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="image_of_item_for_trade">Image of Item for Trade</string>
    <string name="add_item_name">Add Item Name</string>
    <string name="add_item_description">Add Item Description</string>
    <string name="add_item_tags_tag1_tag2_etc">Add Item Tags: Tag1, Tag2, etc.</string>
    <string name="add_item_to_inventory">Add Item to Inventory</string>
    <string name="back_to_inventory">Back to Inventory</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="current_name">Current name</string>
    <string name="current_email">Current email</string>
    <string name="save_changes">Save Changes</string>
    <string name="back_to_profile">Back to Profile</string>
    <string name="logout">Logout</string>
    <string name="home">home</string>
    <string name="trade_block_btn">Trade Block Button</string>
    <string name="inventory_button">Inventory Button</string>
    <string name="profile_button">Profile Button</string>
    <string name="add_button">Add Button</string>
    <string name="home_button">Home Button</string>
    <string name="tradeblock_button">tradeblock button</string>
    <string name="user_name">User Name</string>
    <string name="my_info">My Info</string>
    <string name="trade_history">Trade History</string>
    <string name="full_name">Full Name</string>
    <string name="item_name">item name</string>
    <string name="item_description">item description</string>
    <string name="item_tags">item tags</string>
    <string name="item_chosen_to_trade_for">Item Chosen to Trade For</string>
    <string name="trade">Trade</string>
    <string name="trade_for">Trade For</string>
    <string name="trade_to">Trade To</string>
    <string name="back">Back</string>
    <string name="active_trades">Active Trades</string>
    <string name="pending_trades">Pending Trades</string>
    <string name="send_trade">Send</string>
    <string name="reject_trade">Reject</string>
    <string name="counter_offer">Counter</string>
    <string name="item_received_in_trade">Item Received in Trade</string>
    <string name="item_given_in_trade">Item Given in Trade</string>
    <string name="accept_trade">Accept</string>
    <string name="trade_approval">Trade Approval</string>
    <string name="ongoing_trades">Ongoing Trades</string>
    <string name="finished_trades">Finished Trades</string>
</resources>