<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItemActivity">

    <ImageView
        android:id="@+id/add_item_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/image_of_item_for_trade"
        android:src="@drawable/ic_photo"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_item_image"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/add_item_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/item_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_title"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/add_item_description"
        android:inputType="text"
        android:minHeight="48dp"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/item_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_description"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/add_item_tags_tag1_tag2_etc"
        android:inputType="text"
        android:minHeight="48dp"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/add_to_inv_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_item_to_inventory"
        android:layout_below="@+id/item_tags"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        tools:ignore="VisualLintButtonSize" />
    <Button
        android:id="@+id/back_to_inv_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_to_inventory"
        android:layout_below="@+id/add_to_inv_btn"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        tools:ignore="VisualLintButtonSize" />


    </RelativeLayout>