<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TradeBlockActivity">

    <LinearLayout
        android:id="@+id/tb_home_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/tb_home_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:contentDescription="@string/home_button"
            android:src="@drawable/home_icon" />

        <ImageView
            android:id="@+id/tb_tradeblock_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="35dp"
            android:contentDescription="@string/trade_block_btn"
            android:src="@drawable/ic_tradeblock_foreground" />

        <ImageView
            android:id="@+id/tb_inventory_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="35dp"
            android:contentDescription="@string/inventory_button"
            android:src="@drawable/ic_inventory" />

        <ImageView
            android:id="@+id/prof_logout_btn"
            android:layout_height="50dp"
            android:layout_width="50dp"
            android:layout_marginStart="35dp"
            android:src="@drawable/ic_logout_button_foreground"
            android:contentDescription="@string/profile_button" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewTradeBlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:paddingTop="5dp"
        android:paddingBottom="6dp"
        android:fontFamily="sans-serif-condensed"
        android:includeFontPadding="true"
        android:text="@string/trade_block"
        android:textSize="24sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ongoing_rv"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_below="@id/textViewTradeBlock"
        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/textViewOngoingTrades"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ongoing_rv"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/ongoing_trades" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/finished_rv"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_below="@id/textViewOngoingTrades"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textViewFinishedTrades"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/finished_rv"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/finished_trades" />



</RelativeLayout>