<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="20dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    app:cardElevation = "15dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/single_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_name"
            android:textAlignment="center"
            android:textSize="20sp"
            />

        <ImageView
            android:id="@+id/single_item_img"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/single_item_name"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/image_of_item_for_trade" />

        <TextView
            android:id="@+id/single_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_description"
            android:layout_below="@+id/single_item_img"
            android:textAlignment="center"
            android:textSize="20sp"
        />

        <TextView
            android:id="@+id/single_item_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_tags"
            android:layout_below="@+id/single_item_description"
            android:textAlignment="center"
            android:textSize="20sp"
            />
    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>
